# ChangeLog for kde-base/klickety
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/klickety/ChangeLog,v 1.38 2006/03/28 00:10:22 agriffis Exp $

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org> klickety-3.5.0.ebuild,
  klickety-3.5.1.ebuild, klickety-3.5.2.ebuild:
  Mark 3.5.2 3.5.1 3.5.0 ~ia64

  25 Mar 2006; Aron Griffis <agriffis@gentoo.org> klickety-3.4.3.ebuild:
  Mark 3.4.3 stable on ia64

*klickety-3.5.2 (22 Mar 2006)

  22 Mar 2006; Dan Armak <danarmak@gentoo.org> +klickety-3.5.2.ebuild:
  KDE 3.5.2. Not yet released upstream, and so package.masked for now.

*klickety-3.5.1 (23 Jan 2006)

  23 Jan 2006; Dan Armak <danarmak@gentoo.org> +klickety-3.5.1.ebuild:
  Version 3.5.1. Not yet released upstream, so package.masked for now.

  17 Dec 2005; Markus Rothe <corsair@gentoo.org> klickety-3.5.0.ebuild:
  Added ~ppc64

  12 Dec 2005; Joseph Jezak <josejx@gentoo.org> klickety-3.5.0.ebuild:
  Marked ~ppc.

  10 Dec 2005; Bryan Østergaard <kloeri@gentoo.org klickety-3.4.3.ebuild:
  Stable on alpha.

  10 Dec 2005; Chris White <chriswhite@gentoo.org> klickety-3.4.3.ebuild:
  Marked x86 stable for bug #112842.

  09 Dec 2005; Joseph Jezak <josejx@gentoo.org> klickety-3.4.3.ebuild:
  Marked ppc stable for bug #112842.

  04 Dec 2005; Bryan Østergaard <kloeri@gentoo.org> klickety-3.5.0.ebuild:
  ~alpha keyword.

  29 Nov 2005; Jason Wever <weeve@gentoo.org> klickety-3.5.0.ebuild:
  Added ~sparc keyword.

  25 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org> klickety-3.4.3.ebuild:
  Stable on amd64, bug 112842.

  24 Nov 2005; Markus Rothe <corsair@gentoo.org> klickety-3.4.3.ebuild:
  Stable on ppc64

  24 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org> klickety-3.4.3.ebuild:
  Stable on sparc wrt #112842

*klickety-3.5.0 (22 Nov 2005)

  22 Nov 2005; Dan Armak <danarmak@gentoo.org> +klickety-3.5.0.ebuild:
  Ebuilds for KDE 3.5.0 final. It is not yet released, and is package.masked.
