@@ -1,18 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/klickety/klickety-3.5.0.ebuild,v 1.6 2006/03/28 00:10:23 agriffis Exp $
-KMNAME=kdegames
-MAXKDEVER=$PV
-KM_DEPRANGE="$PV $MAXKDEVER"
-inherit kde-meta
-
-DESCRIPTION="KDE: Klickety is an adaptation of the "clickomania" game"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE=""
-DEPEND="$(deprange $PV $MAXKDEVER kde-base/libkdegames)
-$(deprange $PV $MAXKDEVER kde-base/libksirtet)"
-
-
-KMEXTRACTONLY=libkdegames
-KMCOMPILEONLY=libksirtet
-KMCOPYLIB="libkdegames libkdegames"
